infra/k8s/markerapi-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markerapi-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: markerapi
  template:
    metadata:
      labels:
        app: markerapi
    spec:
      containers:
        - name: markerapi
          image: kingsley555/marker-api
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: markerapi-srv
spec:
  selector:
    app: markerapi
  ports:
    - name: markerapi
      protocol: TCP
      port: 8081
      targetPort: 8081
